--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adempiere/grpc-dictionary-client",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "ADempiere Dictionary Client write in Javascript for gRPC service",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,10 @@
   "homepage": "https://github.com/erpcya/gRPC-Dictionary-Client#readme",
   "dependencies": {
     "google-protobuf": "^3.6.1",
-    "grpc-web": "^1.0.3"
+    "grpc": "^1.18.0",
+    "grpc-promise": "^1.4.0",
+    "grpc-web": "^1.0.3",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {}
 }
