--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adempiere/grpc-dictionary-client",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "ADempiere Dictionary Client write in Javascript for gRPC service",
   "main": "index.js",
   "scripts": {
@@ -16,16 +16,6 @@
     "url": "https://github.com/erpcya/gRPC-Dictionary-Client/issues"
   },
   "homepage": "https://github.com/erpcya/gRPC-Dictionary-Client#readme",
-  "keywords": [
-    "compiere",
-    "adempiere",
-    "erp",
-    "grpc",
-    "grpc-web"
-    "java",
-    "web",
-    "dictionary"
-  ],
   "dependencies": {
     "google-protobuf": "^3.6.1",
     "grpc": "^1.18.0",
@@ -33,5 +23,15 @@
     "grpc-web": "^1.0.3",
     "xmlhttprequest": "^1.8.0"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "keywords": [
+    "compiere",
+    "adempiere",
+    "erp",
+    "grpc",
+    "grpc-web",
+    "java",
+    "web",
+    "dictionary"
+  ]
 }
